Create visualization with React.js

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,1 +1,14 @@
-{ "extends": "@tsconfig/recommended/tsconfig.json" }
+{
+  "extends": "@tsconfig/recommended/tsconfig.json",
+  "compilerOptions": {
+    "strict": true,
+    "module": "esnext",
+    "target": "es5",
+    "jsx": "react",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true
+  }
+}
