--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
   "name": "bubble-sort",
   "version": "1.0.0",
-  "scripts": {
-    "start": "nodemon index.ts"
-  },
   "author": "Agata Mostowik",
-  "license": "ISC",
+  "scripts": {
+    "dev": "vite"
+  },
   "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-use": "^17.4.0"
+  },
+  "devDependencies": {
     "@tsconfig/recommended": "^1.0.2",
     "@types/node": "^18.11.18",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
     "nodemon": "^2.0.20",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vite": "^4.1.0"
   }
 }
